2001-06-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/tkTable.tcl: support for future UTF8_STRING selection on
	unix.

	* generic/tkTable.c:
	* generic/tkTable.h:
	* generic/tkTableTag.c: added support for priorities in tags.
	There are new 'tag lower' and 'tag raise' methods.  This may lead
	to different view characteristics because the default priority
	order is creation order, starting with flash, active, sel, title,
	followed by whatever the user creates.  The old order was fixed at
	flash, active, sel, <celltag>, title, <rowtag>, <coltag>
		**** POTENTIAL INCOMPATABILITY ****

	* tests/tkTable.test: makings of an initial test suite

	* generic/tkTableCmds.c (Table_CurvalueCmd): removed extra curvalue
	in error message.

2001-06-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkTableTag.c (Table_TagCmd): made adding tags to
	cell/row/col create the tag if it didn't exist.  This was
	previously an error.

	* generic/tkTable.c (TableDisplay): changed use of NO_XSETCLIP to
	only operate on Macintosh, added new Windows code that is the
	equivalent of XSetClipRectangles. (teske)
	Removed XFillRectangle function that was there for support with
	8.1 (nobody should use 8.1 anymore).
	(TableDisplay): Corrected clearing of the area beyond the last
	cell to not be incorrect when there is a span on the last cell.
	(TableAdjustParams): handle possible div-by-zero for scrollbar
	calculations. (christian brunner)

	* generic/tkTable.h: added TableMoveCellValue decl.
	* generic/tkTableEdit.c (TableModifyRC): made use of
	TableMoveCellValue.
	* generic/tkTableCell.c (TableSetCellValue): fixed mem leak in
	-cache option.
	(TableMoveCellValue): new function to support possible speedier
	movement of cells when caching is being used. (michael teske)

	* generic/tkTableCell.c (TableCellCoords): corrected
	rowspan/colspan dimension calculation for title cells.
	(Table_SetCmd): correct possible abuse in setting result object
	pointer.

	* README.txt: updated links
